💬 Cura Legacy => CuraEngine Legacy
As discussed in

  https://community.octoprint.org/t/tronxy-x5s-looking-for-profile/8742/3

We don't want people to confuse this with the OctoPrint plugin for Cura.

--- a/translations/de/LC_MESSAGES/messages.po
+++ b/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OctoPrint-CuraLegacy 1.0.0\n"
 "Report-Msgid-Bugs-To: i18n@octoprint.org\n"
-"POT-Creation-Date: 2019-02-12 15:50+0100\n"
+"POT-Creation-Date: 2019-04-04 10:26+0200\n"
 "PO-Revision-Date: 2019-02-12 15:51+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -17,7 +17,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
+"Generated-By: Babel 2.3.4\n"
 
 #: octoprint_curalegacy/static/js/curalegacy.js:188
 msgid "Profile import failed"
@@ -27,7 +27,9 @@ msgstr "Profilimport fehlgeschlagen"
 msgid ""
 "Could not import the provided profile, it might be invalid. Check "
 "<code>octoprint.log</code> for details"
-msgstr "Konnte das Profil nicht importieren, es könnte invalide sein. Für weitere Details siehe <code>octoprint.log</code>"
+msgstr ""
+"Konnte das Profil nicht importieren, es könnte invalide sein. Für weitere"
+" Details siehe <code>octoprint.log</code>"
 
 #: octoprint_curalegacy/static/js/curalegacy.js:243
 msgid "The path doesn't exist"
@@ -56,9 +58,11 @@ msgid ""
 "    <strong>versions up to and including 15.04</strong> are supported.\n"
 "    CuraEngine version 15.06 or newer is <strong>not</strong>\n"
 "    compatible with this plugin.\n"
-msgstr "\n"
+msgstr ""
+"\n"
 "    Gib den Pfad zum CuraEngine Legacy Binary an. Beachte, dass nur\n"
-"    <strong>Versionen bis einschließlich 15.04</strong> unterstützt sind.\n"
+"    <strong>Versionen bis einschließlich 15.04</strong> unterstützt sind."
+"\n"
 "    CuraEngine Version 15.06 oder neuere sind <strong>nicht</strong>\n"
 "    kompatibel mit diesem Plugin.\n"
 
@@ -72,26 +76,31 @@ msgid "Import Profile..."
 msgstr "Profil importieren..."
 
 #: octoprint_curalegacy/templates/curalegacy_settings.jinja2:22
-#, python-format
+#, fuzzy, python-format
 msgid ""
 "For more information on configuration and usage please <a "
-"href=\"%(plugin_cura_homepage)s\" target=\"_blank\">see the Plugin's "
-"homepage</a>."
-msgstr "Für weitere Informationen zu Konfiguration and Verwendung schaue bitte auf die <a href=\"%(plugin_cura_homepage)s\" target=\"_blank\">Homepage des Plugins</a>."
+"href=\"%(plugin_curalegacy_homepage)s\" target=\"_blank\">see the "
+"Plugin's homepage</a>."
+msgstr ""
+"Für weitere Informationen zu Konfiguration and Verwendung schaue bitte "
+"auf die <a href=\"%(plugin_curalegacy_homepage)s\" "
+"target=\"_blank\">Homepage des Plugins</a>."
 
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:2
 msgid "Configure CuraEngine Legacy"
 msgstr "Konfigurierte CuraEngine Legacy"
 
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:3
+#, fuzzy
 msgid ""
 "\n"
-"        The path to CuraEngine has not yet been set up, in order to be "
-"able to use\n"
-"        CuraEngine for slicing it needs to be specified.\n"
+"        The path to CuraEngine Legacy has not yet been set up, in order "
+"to be able to use\n"
+"        CuraEngine Legacy for slicing it needs to be specified.\n"
 "    "
-msgstr "\n"
-"        Der Pfad zu CuraEngine wurde noch nicht konfiguriert.\n"
+msgstr ""
+"\n"
+"        Der Pfad zu CuraEngine Legacy wurde noch nicht konfiguriert.\n"
 "    "
 
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:16
@@ -99,20 +108,26 @@ msgid "Set up a slicing profile"
 msgstr "Konfiguriere ein Slicingprofil"
 
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:17
+#, fuzzy
 msgid ""
 "You haven't imported a slicing profile to use for slicing with CuraEngine"
-"\n"
+" Legacy\n"
 "    yet. If you plan on slicing from within OctoPrint then you should do "
 "this now.\n"
 "    Otherwise just skip this step."
-msgstr "Du hast noch kein Slicingprofile zum Slicen mit CuraEngine importiert. Falls Du vor hast, aus OctoPrint heraus zu slicen, dann solltest Du das jetzt tun. Andernfalls überspringe diesen Schritt einfach."
+msgstr ""
+"Du hast noch kein Slicingprofile zum Slicen mit CuraEngine Legacy "
+"importiert. Falls Du vor hast, aus OctoPrint heraus zu slicen, dann "
+"solltest Du das jetzt tun. Andernfalls überspringe diesen Schritt "
+"einfach."
 
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:28
+#, fuzzy
 msgid ""
 "\n"
 "            <strong>Don't know where to get a profile?</strong> In order "
 "to export\n"
-"            a slicing profile from the Cura desktop UI up to and "
+"            a slicing profile from the legacy Cura desktop UI up to and "
 "including version 15.04.06 (not versions\n"
 "            2.1 and later which are actually newer than 15.04), open it, "
 "set up your profile, then click\n"
@@ -120,11 +135,16 @@ msgid ""
 " <code>.ini</code> file this creates\n"
 "            via the \"Import Profile\" button.\n"
 "        "
-msgstr "\n"
-"            <strong>Du weißt nicht, wo du so ein Profil her bekommst?</strong> Um ein Slicingprofil aus \n"
-"            dem Cura Desktopinterface bis zu Version 15.04.06 zu exportieren (nicht Versionen 2.1 oder neuer, \n"
-"            diese sind neuer als 15.04), öffne es, konfiguriere dein Profil, dann klicke auf \"Datei\" und dort auf \n"
-"            \"Profil speichern\". Du kannst die resultierende <code>.ini</code>Datei dann über den \"Profile \n"
+msgstr ""
+"\n"
+"            <strong>Du weißt nicht, wo du so ein Profil her "
+"bekommst?</strong> Um ein Slicingprofil aus \n"
+"            dem legacy Cura Desktopinterface bis zu Version 15.04.06 zu "
+"exportieren (nicht Versionen 2.1 oder neuer, \n"
+"            diese sind neuer als 15.04), öffne es, konfiguriere dein "
+"Profil, dann klicke auf \"Datei\" und dort auf \n"
+"            \"Profil speichern\". Du kannst die resultierende "
+"<code>.ini</code>Datei dann über den \"Profile \n"
 "            importieren\" Button importieren.\n"
 "        "
 
@@ -133,16 +153,18 @@ msgid "Log the output of CuraEngine to plugin_cura_engine.log"
 msgstr "CuraEngine Ausgaben nach plugin_cura_engine.log loggen"
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/enginePath.jinja2:2
-msgid "Path to CuraEngine"
-msgstr "Pfad zu CuraEngine"
+#, fuzzy
+msgid "Path to CuraEngine Legacy"
+msgstr "Pfad zu CuraEngine Legacy"
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/enginePath.jinja2:6
 msgid "Test"
 msgstr "Test"
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2:4
-msgid "Import Existing Cura Legacy Profile"
-msgstr "Vorhandenes Curalegacyprofil importieren"
+#, fuzzy
+msgid "Import Existing CuraEngine Legacy Profile"
+msgstr "Vorhandenes CuraEngine-Legacy-Profil importieren"
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2:9
 msgid "Profile ini file"
@@ -177,6 +199,7 @@ msgid "Overwrite existing file"
 msgstr "Vorhandene Datei überschreiben"
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2:53
+#, fuzzy
 msgid ""
 "\n"
 "            You can import your existing profile <code>.ini</code> files "
@@ -184,11 +207,18 @@ msgid ""
 "            here. Anything but those are <strong>not supported</strong>. "
 "That especially means that <code>.json</code>\n"
 "            profiles from Cura 15.06.x and <code>.curaprofile</code> "
-"profiles from Cura 2.x will not work, and neither\n"
+"profiles from Cura 2.x, 3.x, 4.x, ... will not work, and neither\n"
 "            will custom Cura profile formats that third party tools like "
 "e.g. Repetier create.\n"
 "        "
-msgstr "Du kannst hier deine vorhandenen <code>.ini</code> Profildateien von <strong>Cura 15.04.x oder älter</strong>Andere Profilformate als diese sind <strong>nicht unterstützt</strong>. Das beinhaltet insbesondere, dass <code>.json</code> Profile von Cura 15.06.x und <code>.curaprofile</code> Profile von Cura 2.x nicht funktionieren werden, ebenso wenig wie Cura-Profildateien, die von Third-Party-Tools wie z.B. Repetier erstellt wurden."
+msgstr ""
+"Du kannst hier deine vorhandenen <code>.ini</code> Profildateien von "
+"<strong>Cura 15.04.x oder älter</strong>Andere Profilformate als diese "
+"sind <strong>nicht unterstützt</strong>. Das beinhaltet insbesondere, "
+"dass <code>.json</code> Profile von Cura 15.06.x und "
+"<code>.curaprofile</code> Profile von Cura 2.x nicht funktionieren "
+"werden, ebenso wenig wie Cura-Profildateien, die von Third-Party-Tools "
+"wie z.B. Repetier erstellt wurden."
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2:61
 msgid "Abort"
@@ -217,3 +247,4 @@ msgstr "Als Standard festlegen"
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profiles.jinja2:18
 msgid "Delete Profile"
 msgstr "Profil entfernen"
+
