--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -1,22 +1,22 @@
-# Translations template for OctoPrint-CuraLegacy.
+# Translations template for OctoPrint-CuraEngineLegacy.
 # Copyright (C) 2019 The OctoPrint Project
 # This file is distributed under the same license as the
-# OctoPrint-CuraLegacy project.
+# OctoPrint-CuraEngineLegacy project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: OctoPrint-CuraLegacy 1.0.0\n"
+"Project-Id-Version: OctoPrint-CuraEngineLegacy 1.0.2\n"
 "Report-Msgid-Bugs-To: i18n@octoprint.org\n"
-"POT-Creation-Date: 2019-02-12 15:50+0100\n"
+"POT-Creation-Date: 2019-04-04 10:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
+"Generated-By: Babel 2.3.4\n"
 
 #: octoprint_curalegacy/static/js/curalegacy.js:188
 msgid "Profile import failed"
@@ -70,8 +70,8 @@ msgstr ""
 #, python-format
 msgid ""
 "For more information on configuration and usage please <a "
-"href=\"%(plugin_cura_homepage)s\" target=\"_blank\">see the Plugin's "
-"homepage</a>."
+"href=\"%(plugin_curalegacy_homepage)s\" target=\"_blank\">see the "
+"Plugin's homepage</a>."
 msgstr ""
 
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:2
@@ -81,9 +81,9 @@ msgstr ""
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:3
 msgid ""
 "\n"
-"        The path to CuraEngine has not yet been set up, in order to be "
-"able to use\n"
-"        CuraEngine for slicing it needs to be specified.\n"
+"        The path to CuraEngine Legacy has not yet been set up, in order "
+"to be able to use\n"
+"        CuraEngine Legacy for slicing it needs to be specified.\n"
 "    "
 msgstr ""
 
@@ -94,7 +94,7 @@ msgstr ""
 #: octoprint_curalegacy/templates/curalegacy_wizard.jinja2:17
 msgid ""
 "You haven't imported a slicing profile to use for slicing with CuraEngine"
-"\n"
+" Legacy\n"
 "    yet. If you plan on slicing from within OctoPrint then you should do "
 "this now.\n"
 "    Otherwise just skip this step."
@@ -105,7 +105,7 @@ msgid ""
 "\n"
 "            <strong>Don't know where to get a profile?</strong> In order "
 "to export\n"
-"            a slicing profile from the Cura desktop UI up to and "
+"            a slicing profile from the legacy Cura desktop UI up to and "
 "including version 15.04.06 (not versions\n"
 "            2.1 and later which are actually newer than 15.04), open it, "
 "set up your profile, then click\n"
@@ -120,7 +120,7 @@ msgid "Log the output of CuraEngine to plugin_cura_engine.log"
 msgstr ""
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/enginePath.jinja2:2
-msgid "Path to CuraEngine"
+msgid "Path to CuraEngine Legacy"
 msgstr ""
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/enginePath.jinja2:6
@@ -128,7 +128,7 @@ msgid "Test"
 msgstr ""
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2:4
-msgid "Import Existing Cura Legacy Profile"
+msgid "Import Existing CuraEngine Legacy Profile"
 msgstr ""
 
 #: octoprint_curalegacy/templates/snippets/settings/curalegacy/profileImporter.jinja2:9
@@ -171,7 +171,7 @@ msgid ""
 "            here. Anything but those are <strong>not supported</strong>. "
 "That especially means that <code>.json</code>\n"
 "            profiles from Cura 15.06.x and <code>.curaprofile</code> "
-"profiles from Cura 2.x will not work, and neither\n"
+"profiles from Cura 2.x, 3.x, 4.x, ... will not work, and neither\n"
 "            will custom Cura profile formats that third party tools like "
 "e.g. Repetier create.\n"
 "        "
